strato-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strato-api
  namespace: strato-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: strato-api
  template:
    metadata:
      labels:
        app: strato-api
    spec:
      containers:
        - name: strato-api
          image: cgamel/strato-api:9ac776a7
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
