strato-api/strato-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strato-api
  namespace: strato-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: strato-api
  template:
    metadata:
      labels:
        app: strato-api
    spec:
      containers:
        - name: strato-api-secret
          image: cgamel/strato-api:75f973ec

          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: strato-api-service
  namespace: strato-api
spec:
  selector:
    app: strato-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strato-api-ingress
  namespace: strato-api
spec:
  rules:
    - host: strato-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strato-api-service
                port:
                  number: 8080  # Expose through the service port (8080)
